fx2j-parser/src/test/resources/element/valid/define.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:define>
        <VBox/>
    </fx:define>
</VBox>