fx2j-parser/src/test/resources/element/invalid/define.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:define>
        <alignment/>
    </fx:define>
</VBox>